--- a/config
+++ b/config
@@ -18,6 +18,7 @@ chatnets = {
 channels = (
   { name = "##fsharp"; chatnet = "FreeNode"; autojoin = "Yes"; },
   { name = "#jsoftware"; chatnet = "FreeNode"; autojoin = "Yes"; },
+  { name = "#apl"; chatnet = "FreeNode"; autojoin = "Yes"; },
   { name = "#haskell"; chatnet = "FreeNode"; autojoin = "Yes"; },
   { name = "##javascript"; chatnet = "FreeNode"; autojoin = "Yes"; },
   { name = "#coffeescript"; chatnet = "FreeNode"; autojoin = "Yes"; },
@@ -34,6 +35,7 @@ ignores = (
     channels = (
       "##fsharp",
       "#jsoftware",
+      "#apl",
       "#haskell",
       "##javascript",
       "#coffeescript",
